--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -192,18 +192,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "3ce9677d",
-      "metadata": {
-        "id": "3ce9677d"
-      },
-      "outputs": [],
-      "source": [
-        "combined_df = pd.read_csv(f\"{dataset_path}/combined/high_WSe2.csv\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "9097aca2",
       "metadata": {},
       "outputs": [
@@ -259,12 +247,12 @@
         "    row[\"to_strata\"] = f\"{row['base']}_{row['defect_concentration']}\"\n",
         "    return row\n",
         "\n",
-        "combined_df = combined_df.apply(lambda row: get_conc(row,ref_sites_dict), axis=1)\n",
+        "comb_df = comb_df.apply(lambda row: get_conc(row,ref_sites_dict), axis=1)\n",
         "\n",
-        "unique_values = pd.unique(combined_df[\"to_strata\"])\n",
+        "unique_values = pd.unique(comb_df[\"to_strata\"])\n",
         "mapping = {value: i for i, value in enumerate(unique_values)}\n",
         "\n",
-        "combined_df[\"strata\"] = combined_df[\"to_strata\"].map(mapping)"
+        "comb_df[\"strata\"] = comb_df[\"to_strata\"].map(mapping)"
       ]
     },
     {
@@ -277,9 +265,9 @@
         "# How about i split the data here\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "train_set, test_set = train_test_split(combined_df, test_size=0.3, stratify=combined_df['strata'], random_state=42)\n",
+        "train_set, test_set = train_test_split(comb_df, test_size=0.3, stratify=comb_df['strata'], random_state=42)\n",
         "\n",
-        "val_set, testing_set = train_test_split(test_set, test_size=0.5, stratify=combined_df['strata'], random_state=42)"
+        "val_set, testing_set = train_test_split(test_set, test_size=0.5, stratify=comb_df['strata'], random_state=42)"
       ]
     },
     {
@@ -312,9 +300,11 @@
         "    target_attribute = \"band_gap_value\"\n",
         "    target_features = [row[target_attribute]]\n",
         "\n",
-        "    the_data = Data(x=torch.tensor(the_nodes), edge_index=torch.tensor(the_edges),\n",
-        "                    edge_attr=torch.tensor(the_edge_features),\n",
-        "                    u=torch.tensor(global_features), y=torch.tensor(target_features))\n",
+        "    the_data = Data(x=torch.tensor(the_nodes, dtype=torch.float),\n",
+        "                    edge_index=torch.tensor(the_edges, dtype=torch.long),\n",
+        "                    edge_attr=torch.tensor(the_edge_features, dtype=torch.float),\n",
+        "                    u=torch.tensor(global_features, dtype=torch.float), \n",
+        "                    y=torch.tensor(target_features, dtype=torch.float))\n",
         "    return the_data\n",
         "\n",
         "# samplex = samplex_df.apply(lambda row: graphy(row), axis = 1).tolist()\n",
