--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -267,7 +267,7 @@
         "\n",
         "train_set, test_set = train_test_split(comb_df, test_size=0.3, stratify=comb_df['strata'], random_state=42)\n",
         "\n",
-        "val_set, testing_set = train_test_split(test_set, test_size=0.5, stratify=comb_df['strata'], random_state=42)"
+        "val_set, testing_set = train_test_split(test_set, test_size=0.5, stratify=test_set['strata'], random_state=42)"
       ]
     },
     {
