bug fix to fit all materials

--- a/forfinal.ipynb
+++ b/forfinal.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AdamKimhub/Msproject1/blob/colab/forfinal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AdamKimhub/Msproject1/blob/main/forfinal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -15,11 +15,7 @@
       "execution_count": null,
       "id": "1c20f759",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1c20f759",
-        "outputId": "f65de842-1faa-4a18-9778-9343225d37ef"
+        "id": "1c20f759"
       },
       "outputs": [],
       "source": [
@@ -193,7 +189,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "9097aca2",
-      "metadata": {},
+      "metadata": {
+        "id": "9097aca2"
+      },
       "outputs": [],
       "source": [
         "# Add strata\n",
@@ -238,7 +236,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "12096f08",
-      "metadata": {},
+      "metadata": {
+        "id": "12096f08"
+      },
       "outputs": [],
       "source": [
         "# How about i split the data here\n",
@@ -246,14 +246,16 @@
         "\n",
         "train_set, test_set = train_test_split(comb_df, test_size=0.3, stratify=comb_df['strata'], random_state=42)\n",
         "\n",
-        "val_set, testing_set = train_test_split(test_set, test_size=0.5, stratify=test_set['strata'], random_state=42)"
+        "val_set, testing_set = train_test_split(test_set, test_size=0.5, random_state=42)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "5fb77ab9",
-      "metadata": {},
+      "metadata": {
+        "id": "5fb77ab9"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -273,7 +275,7 @@
         "    global_attributes = [\"energy\",\"fermi_level\",\"total_mag\",\"formation_energy\",\n",
         "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\", \"substitution_sites\",\n",
         "                         \"defect_sites\", \"defect_concentration\"]\n",
-        "    \n",
+        "\n",
         "    global_features = [row[i] for i in global_attributes]\n",
         "\n",
         "    target_attribute = \"band_gap_value\"\n",
@@ -282,7 +284,7 @@
         "    the_data = Data(x=torch.tensor(the_nodes, dtype=torch.float),\n",
         "                    edge_index=torch.tensor(the_edges, dtype=torch.long),\n",
         "                    edge_attr=torch.tensor(the_edge_features, dtype=torch.float),\n",
-        "                    u=torch.tensor(global_features, dtype=torch.float), \n",
+        "                    u=torch.tensor(global_features, dtype=torch.float),\n",
         "                    y=torch.tensor(target_features, dtype=torch.float))\n",
         "    return the_data\n",
         "\n",
@@ -294,7 +296,7 @@
         "# After splitting, turn them into graph data\n",
         "training = train_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
         "torch.save(training, f\"{dataset_path}/combined/training.pt\")\n",
-        "           \n",
+        "\n",
         "validating = val_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
         "torch.save(validating, f\"{dataset_path}/combined/validating.pt\")\n",
         "\n",
@@ -305,8 +307,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "MsProject",
