--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -351,6 +351,7 @@
         "predicted_values = []\n",
         "actual_values = []\n",
         "\n",
+        "model.eval()\n",
         "with torch.no_grad():\n",
         "    for data in test_loader:\n",
         "        data = data.to(device)\n",
@@ -363,7 +364,7 @@
         "id": "51Zr7YkGjXOJ"
       },
       "id": "51Zr7YkGjXOJ",
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -381,14 +382,14 @@
         "print(all_predicted_values)"
       ],
       "metadata": {
-        "id": "A6w1H1i4dVXh",
-        "outputId": "586de2f3-3fdb-47a4-9b0b-e2e503703798",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "A6w1H1i4dVXh",
+        "outputId": "59bf2e08-84c8-4df8-f55f-f68b75f40fee"
       },
       "id": "A6w1H1i4dVXh",
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,14 +415,14 @@
         "print(all_actual_values)"
       ],
       "metadata": {
-        "id": "YjuQCQHZeokn",
-        "outputId": "b13a5b99-bf7e-49e8-fee8-d94657c9b347",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YjuQCQHZeokn",
+        "outputId": "6107137f-33f6-43c2-d813-d63af41fcac9"
       },
       "id": "YjuQCQHZeokn",
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,14 +440,14 @@
         "    print(f\"Predicted: {all_predicted_values[i]}, Actual: {all_actual_values[i]}\")"
       ],
       "metadata": {
-        "id": "FHu3J05dfaEM",
-        "outputId": "a2bf02b6-4c70-43e5-b0e7-e4045bdabe5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FHu3J05dfaEM",
+        "outputId": "69f7c096-9664-4add-9079-afb11156c090"
       },
       "id": "FHu3J05dfaEM",
-      "execution_count": 12,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,14 +481,14 @@
       ],
       "metadata": {
         "id": "Y5-HSeW8jd7T",
-        "outputId": "d66b70cf-268a-4a6c-f8af-ee3898422311",
+        "outputId": "68397cbf-8334-46e5-c3b7-158a01da3d32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         }
       },
       "id": "Y5-HSeW8jd7T",
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
