Clarified the codes

--- a/cif_to_graph.ipynb
+++ b/cif_to_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "    dataset_path = '/content/drive/My Drive/dataset'\n",
     "\n",
     "    # Install required packages\n",
-    "    !pip install pymatgen\n",
+    "    !pip install pymatgen mp-api\n",
     "\n",
     "else:\n",
     "    dataset_path = 'dataset'"
@@ -23,55 +23,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import ast\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pymatgen.core import Structure, PeriodicSite, DummySpecie\n",
-    "from pymatgen.analysis.local_env import MinimumDistanceNN\n"
+    "from pymatgen.core import Structure, PeriodicSite, DummySpecie, Composition\n",
+    "from pymatgen.core.periodic_table import Element\n",
+    "from pymatgen.analysis.local_env import MinimumDistanceNN\n",
+    "from mp_api.client import MPRester\n",
+    "import json\n",
+    "import config\n",
+    "\n",
+    "API_KEY = config.API_KEY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get defective structure\n",
-    "defective_file_path = Path(f\"{dataset_path}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\")\n",
+    "defective_file_path = f\"{dataset_path}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\"\n",
     "defective_structure = Structure.from_file(defective_file_path)\n",
     "\n",
     "# Get reference structure\n",
-    "ref_file_path = Path(f\"{dataset_path}/high_GaSe/GaSe.cif\")\n",
-    "ref_unit_cell = Structure.from_file(ref_file_path)\n",
-    "reference_structure = ref_unit_cell.make_supercell([6,6,1])"
+    "ref_file_path = f\"{dataset_path}/ref_cifs/high_GaSe.cif\"\n",
+    "reference_structure = Structure.from_file(ref_file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full Formula (X2 S1)\n",
+      "Reduced Formula: X2S\n",
+      "abc   :  22.914400  22.914400  20.000000\n",
+      "angles:  90.000000  90.000000 120.000012\n",
+      "pbc   :       True       True       True\n",
+      "Sites (3)\n",
+      "  #  SP           a         b        c    an_change    bonds_broken    new_an    original_an    site_fe    substitution_defect    vacancy_defect\n",
+      "---  ----  --------  --------  -------  -----------  --------------  --------  -------------  ---------  ---------------------  ----------------\n",
+      "  0  S     0.222222  0.611111  0.56548          -18               0        16             34     -0.638                      1                 0\n",
+      "  1  X0+   0.889     0.944     0.565            -34               3         0             34      3.489                      0                 1\n",
+      "  2  X0+   0.389     0.611     0.325            -34               3         0             34      3.489                      0                 1\n"
+     ]
+    }
+   ],
    "source": [
     "def struct_to_dict(structure):\n",
     "    rounded_coords = np.round(structure.frac_coords, 3)\n",
     "    return {tuple(coord): site for coord, site in zip(rounded_coords, structure.sites)}\n",
     "\n",
-    "def fe_site(original, new):\n",
-    "    # from elements.csv\n",
-    "    element_pot = element_pot = {\"Mo\":-10.9332, \"S\":-4.127, \"W\":-13.0106, \"Se\":-3.489,\n",
-    "                   \"B\":-6.704, \"N\":-8.324, \"Ga\":-3.03, \"In\":-2.715,\n",
-    "                   \"P\":-5.362, \"V\":-8.992, \"O\":-4.938, \"C\":-9.226}\n",
+    "# Functions to get formation energy from Materials Project\n",
+    "def get_formation(element, API_KEY):\n",
+    "    with MPRester(API_KEY) as mpr:\n",
+    "        results = mpr.materials.summary.search(\n",
+    "            elements=[element],\n",
+    "            num_elements=1,\n",
+    "            fields= [\"energy_per_atom\"]\n",
+    "        )\n",
+    "        forms_list = [result.energy_per_atom for result in results]\n",
+    "        avg_formation_energy = np.mean(forms_list)\n",
+    "        \n",
+    "    return avg_formation_energy\n",
     "    \n",
+    "\n",
+    "def get_from_json(element, API_KEY):\n",
+    "    with open(\"./test.json\", \"r\") as f:\n",
+    "        try:\n",
+    "            the_dict = json.load(f)\n",
+    "            if element in the_dict:\n",
+    "                to_return = the_dict[element]\n",
+    "\n",
+    "            else:\n",
+    "                to_return = get_formation(element, API_KEY)\n",
+    "                the_dict[element] = to_return\n",
+    "                with open(\"./test.json\", \"w\") as f:\n",
+    "                    json.dump(the_dict, f)\n",
+    "\n",
+    "        except:\n",
+    "            the_dict = {}\n",
+    "            with open(\"./test.json\", \"a\") as f:\n",
+    "                to_return = get_formation(element, API_KEY)\n",
+    "                the_dict[element] = to_return\n",
+    "                json.dump(the_dict, f)\n",
+    "\n",
+    "        return to_return\n",
+    "\n",
+    "def fe_site(original, new):\n",
     "    if new == 0: # For vcancy\n",
-    "        fe_defect = element_pot[original]* -1\n",
+    "        fe_defect = get_from_json(original, API_KEY) * -1\n",
     "\n",
     "    else: # For substitution\n",
-    "        fe_defect = (element_pot[original]* -1) + element_pot[new]\n",
+    "        form_original = get_from_json(original, API_KEY)\n",
+    "        form_new = get_from_json(new, API_KEY)\n",
+    "        fe_defect = (form_original * -1) + form_new\n",
     "        \n",
     "    return fe_defect\n",
     "\n",
@@ -151,20 +205,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0.0, 34, 16, -18, 0.0, 1.0, -0.6379999999999999], [1, 3, 34, 0, -34, 1.0, 0.0, 3.489], [2, 3, 34, 0, -34, 1.0, 0.0, 3.489]]\n",
+      "[[0, 0, 0, 1, 1, 1, 2, 2, 2], [0, 1, 2, 0, 1, 2, 0, 1, 2]]\n",
+      "[[np.float64(0.0), 1, np.float64(0.0)], [np.float64(13.218612878118082), 0, np.float64(4.127)], [np.float64(6.143837688715257), 0, np.float64(4.127)], [np.float64(13.218612878118082), 0, np.float64(4.127)], [np.float64(0.0), 1, np.float64(0.0)], [np.float64(11.185157478479823), 1, np.float64(0.0)], [np.float64(6.143837688715257), 0, np.float64(4.127)], [np.float64(11.185157478479823), 1, np.float64(0.0)], [np.float64(0.0), 1, np.float64(0.0)]]\n",
+      "[0, 15]\n",
+      "[0.6666666666666666, 0.3333333333333333]\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_nodes_edges(structure):\n",
+    "# Turn the defects structure into crystal graph\n",
+    "def get_c_graph(structure):\n",
     "    sites_list = structure.sites\n",
     "\n",
     "    # The nodes: These are the sites features\n",
     "    nodes = []\n",
     "    for i, site in enumerate(sites_list):\n",
-    "        node_features = [i, site.properties[\"bonds_broken\"], site.properties[\"original_an\"], \n",
-    "                         site.properties[\"new_an\"], site.properties[\"an_change\"], \n",
-    "                         site.properties[\"vacancy_defect\"], site.properties[\"substitution_defect\"], \n",
-    "                         site.properties[\"site_fe\"]]\n",
+    "        node_features = [\n",
+    "            i, \n",
+    "            site.properties[\"bonds_broken\"], \n",
+    "            site.properties[\"original_an\"], \n",
+    "            site.properties[\"new_an\"], \n",
+    "            site.properties[\"an_change\"], \n",
+    "            site.properties[\"vacancy_defect\"], \n",
+    "            site.properties[\"substitution_defect\"], \n",
+    "            site.properties[\"site_fe\"]\n",
+    "        ]\n",
+    "\n",
     "        # Node features syntax\n",
     "        nodes.append(node_features)\n",
     "         \n",
@@ -178,75 +252,70 @@
     "    \n",
     "    for i, site_i in enumerate(sites_list):\n",
     "        for j, site_j  in enumerate(sites_list):\n",
+    "            # Edges \n",
     "            from_e.append(i)\n",
     "            to_e.append(j)\n",
+    "\n",
     "            # Get distance between sites\n",
     "            dist = site_i.distance(site_j)\n",
     "\n",
     "            # Are the defects the same or different\n",
-    "            if site_i.properties[\"an_change\"] == site_j.properties[\"an_change\"]:\n",
-    "                same_diff = 1\n",
-    "            else:\n",
-    "                same_diff = 0\n",
+    "            same_diff = int(site_i.properties[\"an_change\"] == site_j.properties[\"an_change\"])\n",
     "\n",
     "            # What is the site_fe difference\n",
     "            site_fe_diff = np.abs(site_i.properties[\"site_fe\"] - site_j.properties[\"site_fe\"])\n",
     "\n",
     "            edge_features.append([dist,same_diff,site_fe_diff])\n",
+    "            \n",
     "    edges.append(from_e)\n",
     "    edges.append(to_e)\n",
-    "    return nodes, edges, edge_features\n",
     "\n",
-    "the_nodes, the_edges, the_edge_features = get_nodes_edges(defects_structure)\n",
-    "print(the_nodes)\n",
-    "print(the_edges)\n",
-    "print(the_edge_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_gf_tf(df, cif_id):\n",
-    "    # The global attributes\n",
-    "    global_attributes = [\"energy\",\"fermi_level\",\"total_mag\",\"formation_energy\",\n",
-    "                         \"energy_per_atom\",\"E_1\",\"vacancy_sites\",\n",
-    "                         \"substitution_sites\",\"defect_sites\"]\n",
-    "    \n",
-    "    target_attribute = \"band_gap_value\"\n",
-    "    \n",
-    "    # Get index of cif id\n",
-    "    index_value = df[df[\"_id\"] == cif_id].index.values[0]\n",
-    "    \n",
-    "    # Use index to get values of global attributes\n",
-    "    gf = [df[i][index_value] for i in global_attributes]\n",
+    "    # The global features\n",
+    "    the_ids = []\n",
+    "    the_ratios = []\n",
+    "    total_sites = len(sites_list)\n",
     "\n",
-    "    # Use index to get value of target attribute\n",
-    "    tf = [df[target_attribute][index_value]]\n",
-    "        \n",
-    "    return gf,tf\n",
+    "    the_formula = structure.formula\n",
+    "    composition = Composition(the_formula)\n",
+    "    element_dict = composition.get_el_amt_dict()\n",
     "\n",
-    "# an_id = dataset_df['_id'][an_index]\n",
-    "an_id = \"GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054\"\n",
-    "the_gf, the_tf = get_gf_tf(dataset_df, an_id)\n",
-    "print(the_gf, the_tf)"
+    "    for symb, numb in element_dict.items():\n",
+    "        try:\n",
+    "            ids = Element(symb).Z - 1\n",
+    "        except ValueError:\n",
+    "            ids = 0\n",
+    "        the_ids.append(ids)\n",
+    "        ration = numb/total_sites\n",
+    "        the_ratios.append(ration)\n",
+    "\n",
+    "    return nodes, edges, edge_features, the_ids, the_ratios\n",
+    "\n",
+    "sample_graph = get_c_graph(defects_structure)\n",
+    "\n",
+    "for i in sample_graph:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`nodes` = node features (matrix, one row per node/atom)\n",
+    "I utilised the **cloud representation of defects** in this project. This means that I mapped the locations where every defect was and created a graphical representation of the *defects-only structure*.\n",
     "\n",
-    "`edges` = connectivity (which atom/node connects to which node/atom)\n",
+    "To do this, you need to have:\n",
     "\n",
-    "`edge_features` = edge features (distance between every atom/node)\n",
+    "1. The **defective structure**. This is the structure **with** defects\n",
+    "2. The **pristine structure**. This is pure form of the defective structure.\n",
     "\n",
-    "`y` = target (band gap)\n",
+    "With these crystal structures, one can map the locations and get some attributes of the defects sites using `get_defects_structure(defective_structure, pristine_structue)`to create a **defects-only structure**.\n",
     "\n",
-    "`u` = global features (formation energy, total_mag, etc.)"
+    "Once you have the defects-only structure, you can get its crystal representation using `get_c_graph(defects_only_structure)`\n",
+    "\n",
+    "The crystal graph consists of:\n",
+    "1. **Nodes:** These represent the atoms/defect points.\n",
+    "2. **Edges:** These are the bonds between atoms.\n",
+    "3. **Edge attributes:** These are the characteristics of the bonds.\n",
+    "4. **Global features:** These are features for the whole defects-only structure."
    ]
   }
  ],
