--- a/model_build.ipynb
+++ b/model_build.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "2507cdbf",
       "metadata": {
         "colab": {
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "7Req-6GBc6g4",
       "metadata": {
         "id": "7Req-6GBc6g4"
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "7abbbf3e",
       "metadata": {
         "id": "7abbbf3e"
@@ -125,7 +125,7 @@
         }
       },
       "id": "8hPnHGsamdWB",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "f635b07c",
       "metadata": {
         "id": "f635b07c"
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "698c87d3",
       "metadata": {
         "id": "698c87d3"
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "4AKvTT3DMurV",
       "metadata": {
         "id": "4AKvTT3DMurV"
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "6588fcf2",
       "metadata": {
         "id": "6588fcf2"
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "IpkYtrSA29A5",
       "metadata": {
         "colab": {
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "3dc04e6d",
       "metadata": {
         "colab": {
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "VBAQysrh6B3u",
       "metadata": {
         "id": "VBAQysrh6B3u"
@@ -452,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "R_jB3y-1bmqb",
       "metadata": {
         "colab": {
@@ -486,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "Y5-HSeW8jd7T",
       "metadata": {
         "colab": {
@@ -520,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "O7Quwl9GvkkF",
       "metadata": {
         "colab": {
@@ -552,6 +552,54 @@
         "plt.title('Actual vs Predicted Band Gap Values')\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+        "\n",
+        "mae = mean_absolute_error(actual_values, predicted_values)\n",
+        "mse = mean_squared_error(actual_values, predicted_values)\n",
+        "r2 = r2_score(actual_values, predicted_values)\n",
+        "\n",
+        "print(f'Mean Absolute Error: {mae:.4f}')\n",
+        "print(f'Mean Squared Error: {mse:.4f}')\n",
+        "print(f'R-squared: {r2:.4f}')"
+      ],
+      "metadata": {
+        "id": "gcUdDK8oGc80",
+        "outputId": "45425dce-264a-4d42-e119-9a73a79dc820",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "gcUdDK8oGc80",
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean Absolute Error: 0.0512\n",
+            "Mean Squared Error: 0.0119\n",
+            "R-squared: 0.9620\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save model\n",
+        "path_file = f\"{dataset_path}/BG_model.pth\"\n",
+        "torch.save(the_model.state_dict(), path_file)"
+      ],
+      "metadata": {
+        "id": "YMkBEjj4HDaO"
+      },
+      "id": "YMkBEjj4HDaO",
+      "execution_count": 20,
+      "outputs": []
     }
   ],
   "metadata": {
