Update the whole project for future replication

--- a/cif_to_graph.ipynb
+++ b/cif_to_graph.ipynb
@@ -12,20 +12,31 @@
     "    # Mount Google Drive\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
-    "    dataset_path = '/content/drive/My Drive/dataset'\n",
+    "    original_data = '/content/drive/My Drive/original_dataset'\n",
+    "    final_data = '/content/drive/My Drive/final_dataset'\n",
     "\n",
     "    # Install required packages\n",
     "    !pip install pymatgen mp-api\n",
     "\n",
     "else:\n",
-    "    dataset_path = 'dataset'"
+    "    original_data = \"original_dataset\"\n",
+    "    final_data = \"final_dataset\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -36,22 +47,22 @@
     "import json\n",
     "import config\n",
     "\n",
-    "API_KEY = config.API_KEY"
+    "API_KEY = config.API_KEY # Replace with your Materials Project API key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get defective structure\n",
-    "defective_file_path = f\"{dataset_path}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\"\n",
+    "defective_file_path = f\"{original_data}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\"\n",
     "defective_structure = Structure.from_file(defective_file_path)\n",
     "\n",
     "# Get reference structure\n",
-    "ref_file_path = f\"{dataset_path}/ref_cifs/high_GaSe.cif\"\n",
-    "reference_structure = Structure.from_file(ref_file_path)"
+    "ref_file_path = f\"{final_data}/ref_cifs/high_GaSe.cif\"\n",
+    "reference_structure = Structure.from_file(ref_file_path)\n"
    ]
   },
   {
@@ -300,7 +311,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I utilised the **cloud representation of defects** in this project. This means that I mapped the locations where every defect was and created a graphical representation of the *defects-only structure*.\n",
+    "I utilised the **cloud representation of defects** in this project. \n",
+    "\n",
+    "This mechanism formulated by Nikita Kazeev is done by mapping the locations of every defect and creating a graphical representation of the *defects-only structure*.\n",
     "\n",
     "To do this, you need to have:\n",
     "\n",
@@ -309,7 +322,7 @@
     "\n",
     "With these crystal structures, one can map the locations and get some attributes of the defects sites using `get_defects_structure(defective_structure, pristine_structue)`to create a **defects-only structure**.\n",
     "\n",
-    "Once you have the defects-only structure, you can get its crystal representation using `get_c_graph(defects_only_structure)`\n",
+    "Once you have the defects-only structure, you can get its graphical representation using `get_c_graph(defects_only_structure)`\n",
     "\n",
     "The crystal graph consists of:\n",
     "1. **Nodes:** These represent the atoms/defect points.\n",
