--- a/graph_to_mldata.ipynb
+++ b/graph_to_mldata.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "1c20f759",
       "metadata": {
         "colab": {
@@ -127,7 +127,8 @@
         "    # Mount Google Drive\n",
         "    from google.colab import drive\n",
         "    drive.mount('/content/drive')\n",
-        "    dataset_path = '/content/drive/My Drive/dataset'\n",
+        "    original_data = '/content/drive/My Drive/original_dataset'\n",
+        "    final_data = '/content/drive/My Drive/final_dataset'\n",
         "\n",
         "    # Install required packages\n",
         "    !pip install pymatgen torch_geometric mp_api\n",
@@ -135,7 +136,10 @@
         "    from torch_geometric.data import Data\n",
         "\n",
         "else:\n",
-        "    dataset_path = 'dataset'"
+        "    original_data = \"original_dataset\"\n",
+        "    final_data = \"final_dataset\"\n",
+        "\n",
+        "    "
       ]
     },
     {
@@ -172,7 +176,7 @@
       "outputs": [],
       "source": [
         "# Load the dataset\n",
-        "comb_df = pd.read_csv(f\"{dataset_path}/combined/combined.csv\")"
+        "comb_df = pd.read_csv(f\"{final_data}/combined/combined.csv\")"
       ]
     },
     {
@@ -200,8 +204,8 @@
       "source": [
         "# Create graph representation of the structures\n",
         "def graphy(row):\n",
-        "    defective_structure = Structure.from_file(f\"dataset/{row[\"dataset_material\"]}/cifs/{row[\"_id\"]}.cif\")\n",
-        "    reference_structure = Structure.from_file(f\"dataset/ref_cifs/{row[\"dataset_material\"]}.cif\")\n",
+        "    defective_structure = Structure.from_file(f\"{original_data}/{row[\"dataset_material\"]}/cifs/{row[\"_id\"]}.cif\")\n",
+        "    reference_structure = Structure.from_file(f\"{final_data}/ref_cifs/{row[\"dataset_material\"]}.cif\")\n",
         "\n",
         "    defects_only_structure = to_graph.get_defects_structure(defective_structure, reference_structure)\n",
         "\n",
@@ -221,13 +225,13 @@
         "\n",
         "# Turn each dataset into graph data and save it\n",
         "training = train_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
-        "torch.save(training, f\"{dataset_path}/combined/training.pt\")\n",
+        "torch.save(training, f\"{final_data}/combined/training.pt\")\n",
         "\n",
         "validating = val_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
-        "torch.save(validating, f\"{dataset_path}/combined/validating.pt\")\n",
+        "torch.save(validating, f\"{final_data}/combined/validating.pt\")\n",
         "\n",
         "testing = test_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
-        "torch.save(testing, f\"{dataset_path}/combined/testing.pt\")"
+        "torch.save(testing, f\"{final_data}/combined/testing.pt\")"
       ]
     }
   ],
