Saw the get_strata function in action

--- a/combine.ipynb
+++ b/combine.ipynb
@@ -1400,14 +1400,18 @@
     }
    ],
    "source": [
-    "# Ready the strata \n",
+    "# Ready the strata using a function\n",
     "# Convert the values in the strata to integers to split effectively\n",
-    "unique_values = pd.unique(merged_df[\"to_strata\"])\n",
-    "mapping = {value: i for i, value in enumerate(unique_values)}\n",
+    "def get_strata(merged_df):\n",
+    "    unique_values = pd.unique(merged_df[\"to_strata\"])\n",
+    "    mapping = {value: i for i, value in enumerate(unique_values)}\n",
     "\n",
-    "merged_df[\"strata\"] = merged_df[\"to_strata\"].map(mapping)\n",
-    "merged_df = merged_df.drop(columns=[\"to_strata\"])\n",
-    "merged_df.head()"
+    "    merged_df[\"strata\"] = merged_df[\"to_strata\"].map(mapping)\n",
+    "    merged_df = merged_df.drop(columns=[\"to_strata\"])\n",
+    "    return merged_df\n",
+    "\n",
+    "new_df = get_strata(merged_df)\n",
+    "new_df.head()"
    ]
   },
   {
