--- a/combine.ipynb
+++ b/combine.ipynb
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d2b83d96",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
     "ref_sites_dict[mat_dataset] = reference_structure.num_sites\n",
     "\n",
     "# Get defect sites that will help in creating the strata column\n",
-    "def get_strata(row, ref_sites_dict):\n",
+    "def get_to_strata(row, ref_sites_dict):\n",
     "    # Get the defects in the df\n",
     "    all_columns = list(row.index)  \n",
     "    vacant_columns = [col for col in all_columns if \"vacant\" in col]\n",
@@ -1176,7 +1176,7 @@
     "\n",
     "\n",
     "# Replace the specific defect sites with type of defect sites\n",
-    "merged_df = merged_df.apply(lambda row: get_strata(row, ref_sites_dict), axis=1)\n",
+    "merged_df = merged_df.apply(lambda row: get_to_strata(row, ref_sites_dict), axis=1)\n",
     "merged_df = merged_df.drop(columns=[col for col in merged_df.columns if \"vacant_\" in col or \"sub_\" in col])\n",
     "merged_df.head()"
    ]
