--- a/02-clean_to_mldata.ipynb
+++ b/02-clean_to_mldata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,30 +13,23 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "    original_data = '/content/drive/My Drive/original_dataset'\n",
-    "    final_data = '/content/drive/My Drive/final_dataset'\n",
+    "    final_data = '/content/drive/My Drive/Final_Dataset'\n",
     "\n",
     "    # Install required packages\n",
-    "    !pip install pymatgen mp-api\n",
+    "    !pip install pymatgen torch_geometric mp_api\n",
+    "    import torch\n",
+    "    from torch_geometric.data import Data\n",
     "\n",
     "else:\n",
     "    original_data = \"original_dataset\"\n",
-    "    final_data = \"final_dataset\""
+    "    final_data = \"Final_Dataset\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/adam/anaconda3/envs/MsProject/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -47,7 +40,15 @@
     "import json\n",
     "import config\n",
     "\n",
+    "\n",
     "API_KEY = config.API_KEY # Replace with your Materials Project API key"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a defects cloud"
    ]
   },
   {
@@ -56,38 +57,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For testing\n",
+    "\n",
     "# Get defective structure\n",
     "defective_file_path = f\"{original_data}/high_GaSe/cifs/GaSe_Ga72Se69S1_90b1b09f-acf0-46e6-8173-a2e71c884054.cif\"\n",
     "defective_structure = Structure.from_file(defective_file_path)\n",
     "\n",
     "# Get reference structure\n",
     "ref_file_path = f\"{final_data}/ref_cifs/high_GaSe.cif\"\n",
-    "reference_structure = Structure.from_file(ref_file_path)\n"
+    "reference_structure = Structure.from_file(ref_file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Full Formula (X2 S1)\n",
-      "Reduced Formula: X2S\n",
-      "abc   :  22.914400  22.914400  20.000000\n",
-      "angles:  90.000000  90.000000 120.000012\n",
-      "pbc   :       True       True       True\n",
-      "Sites (3)\n",
-      "  #  SP           a         b        c    an_change    bonds_broken    new_an    original_an    site_fe    substitution_defect    vacancy_defect\n",
-      "---  ----  --------  --------  -------  -----------  --------------  --------  -------------  ---------  ---------------------  ----------------\n",
-      "  0  S     0.222222  0.611111  0.56548          -18               0        16             34     -0.638                      1                 0\n",
-      "  1  X0+   0.889     0.944     0.565            -34               3         0             34      3.489                      0                 1\n",
-      "  2  X0+   0.389     0.611     0.325            -34               3         0             34      3.489                      0                 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def struct_to_dict(structure):\n",
     "    rounded_coords = np.round(structure.frac_coords, 3)\n",
@@ -216,21 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0.0, 34, 16, -18, 0.0, 1.0, -0.6379999999999999], [1, 3, 34, 0, -34, 1.0, 0.0, 3.489], [2, 3, 34, 0, -34, 1.0, 0.0, 3.489]]\n",
-      "[[0, 0, 0, 1, 1, 1, 2, 2, 2], [0, 1, 2, 0, 1, 2, 0, 1, 2]]\n",
-      "[[np.float64(0.0), 1, np.float64(0.0)], [np.float64(13.218612878118082), 0, np.float64(4.127)], [np.float64(6.143837688715257), 0, np.float64(4.127)], [np.float64(13.218612878118082), 0, np.float64(4.127)], [np.float64(0.0), 1, np.float64(0.0)], [np.float64(11.185157478479823), 1, np.float64(0.0)], [np.float64(6.143837688715257), 0, np.float64(4.127)], [np.float64(11.185157478479823), 1, np.float64(0.0)], [np.float64(0.0), 1, np.float64(0.0)]]\n",
-      "[0, 15]\n",
-      "[0.6666666666666666, 0.3333333333333333]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Turn the defects structure into crystal graph\n",
     "def get_c_graph(structure):\n",
@@ -329,6 +302,75 @@
     "2. **Edges:** These are the bonds between atoms.\n",
     "3. **Edge attributes:** These are the characteristics of the bonds.\n",
     "4. **Global features:** These are features for the whole defects-only structure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impliment cloud representation in the whole data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "comb_df = pd.read_csv(f\"{final_data}/combined_dataset.csv\")\n",
+    "\n",
+    "train_set, test_set = train_test_split(comb_df, test_size=0.35, stratify=comb_df['strata'], random_state=42)\n",
+    "test_set, val_set = train_test_split(test_set, test_size=0.5, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create graph representation of the structures\n",
+    "def graphy(row):\n",
+    "    defective_structure = Structure.from_file(f\"{original_data}/{row[\"dataset_material\"]}/cifs/{row[\"_id\"]}.cif\")\n",
+    "    reference_structure = Structure.from_file(f\"{final_data}/ref_cifs/{row[\"dataset_material\"]}.cif\")\n",
+    "\n",
+    "    defects_only_structure = get_defects_structure(defective_structure, reference_structure)\n",
+    "\n",
+    "    nodes, edges, edge_features, ids, ratios = get_c_graph(defects_only_structure)\n",
+    "\n",
+    "    # target = train_set[\"band_gap_value\"]\n",
+    "    target = row[\"band_gap_value\"]\n",
+    "\n",
+    "    the_data = Data(\n",
+    "        x=torch.tensor(nodes, dtype=torch.float),\n",
+    "        edge_index=torch.tensor(edges, dtype=torch.long),\n",
+    "        edge_attr=torch.tensor(edge_features, dtype=torch.float),\n",
+    "        the_ids = torch.tensor(ids, dtype=torch.long).unsqueeze(0),\n",
+    "        the_ratios = torch.tensor(ratios, dtype=torch.float).unsqueeze(0),\n",
+    "        y=torch.tensor(target, dtype=torch.float).unsqueeze(0)\n",
+    "    )\n",
+    "    return the_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Turn each dataset into graph data and save it\n",
+    "training = train_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
+    "torch.save(training, f\"{final_data}/combined/training.pt\")\n",
+    "\n",
+    "validating = val_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
+    "torch.save(validating, f\"{final_data}/combined/validating.pt\")\n",
+    "\n",
+    "testing = test_set.apply(lambda row: graphy(row), axis = 1).tolist()\n",
+    "torch.save(testing, f\"{final_data}/combined/testing.pt\")"
    ]
   }
  ],
